correction de l'affichage de l'icone dans la navbar et ajustement gap section experience

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ body {
 
   /*  work experience section */
   .work-container {
-    @apply grid lg:grid-cols-3 grid-cols-1 gap-5 mt-12;
+    @apply grid lg:grid-cols-3 grid-cols-1 lg:gap-5 gap-y-5 mt-12;
   }
 
   .work-canvas {
